:lipstick: Fix whitespace in made-with between h1 and explainer (Closes #35)

--- a/src/style.styl
+++ b/src/style.styl
@@ -207,6 +207,7 @@ section.contents
 
 	&__title
 		padding-bottom 0.25rem
+		margin-bottom 0
 
 	&__explainer
 		padding-bottom 3rem
